--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
     background-color: black;
     box-shadow: 0px 0px 15px red;
     line-height: 3vw;
+    font-size: 1rem;
 }
 
 #level-counter {
